# VirtualFPU

./: .gitignore  CMakeLists.txt  README.md  main.cpp  virtualfpu.cpp  virtualfpu.h
docs/: index.html
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  launcher.properties  project.xml
nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml
tests/tests/: main.cpp  tests.cpp  tests.h
tests/tests/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/tests/nbproject/private/: private.xml
